L25-di_homework фиксы